--- a/khi_robot_control/package.xml
+++ b/khi_robot_control/package.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0"?>
 <package>
   <name>khi_robot_control</name>
-  <version>1.1.0</version>
+  <!-- because bloom-release chokes on mismatched version strings: -->
+  <!-- <version>1.1.0</version> -->
+  <version>1.0.0</version>
   <description>ROS KHI robot controller package based on ros_control</description>
 
   <author email="nakamichi_d@khi.co.jp">nakamichi_d</author>
